<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.AddAControlFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/string_add_up_your_spending"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/guideline"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent=".15" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_add_control"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="24dp"
                    android:backgroundTint="#00B607"
                    android:drawableEnd="@drawable/outline_check_black"
                    android:drawablePadding="4dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/string_send"
                    android:textColor="#FFFFFF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guideline3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_delete_control"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#C80000"
                    android:drawableEnd="@drawable/outline_close_24"
                    android:drawablePadding="4dp"
                    android:text="@string/string_delete"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline3"
                    app:layout_constraintTop_toTopOf="@+id/button_add_control" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

                <ImageView
                    android:id="@+id/imageView_error_spinner_action"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:contentDescription="@string/string_image_with_warning_icon"
                    android:src="@drawable/baseline_error_24"
                    android:visibility="gone"
                    app:layout_constraintStart_toEndOf="@+id/linearLayout"
                    app:layout_constraintTop_toTopOf="@+id/guideline"
                    tools:visibility="visible" />

                <ImageView
                    android:id="@+id/imageView_error_spinner_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="120dp"
                    android:contentDescription="@string/string_image_with_warning_icon"
                    android:src="@drawable/baseline_error_24"
                    android:visibility="invisible"
                    app:layout_constraintStart_toEndOf="@+id/linearLayout"
                    app:layout_constraintTop_toTopOf="@+id/guideline"
                    tools:visibility="visible" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/guideline">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="210dp"
                        android:layout_height="wrap_content"
                        android:text="@string/string_action"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spinner_action"
                        android:layout_width="match_parent"
                        android:layout_height="48dp" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/string_type"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:visibility="gone"
                        tools:visibility="visible" />

                    <Spinner
                        android:id="@+id/spinner_type"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:visibility="gone"
                        tools:visibility="visible" />

                    <LinearLayout
                        android:id="@+id/linear_layout_description_add"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp"
                        android:orientation="vertical"
                        android:visibility="gone"
                        tools:visibility="visible">

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/string_describe_your_investment"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_text_description_add"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:ems="10"
                            android:hint="@string/string_ex_shares_cash"
                            android:inputType="text"
                            android:maxLength="20"
                            android:maxLines="1"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawablePadding="2dp"
                            android:text="@string/string_optional"
                            android:textAlignment="textEnd"
                            android:textSize="12sp"
                            android:textStyle="italic"
                            app:drawableEndCompat="@drawable/baseline_do_not_disturb_on_24" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/string_value"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_value"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:hint="@string/string_ex_50"
                        android:inputType="numberDecimal"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/string_day_month_year"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_day"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:hint="@string/string_ex_01_01_2000"
                        android:inputType="number"
                        android:maxLength="10"
                        android:textSize="14sp" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>